Fixed admin toolbar z-index issue

--- a/scss/root/_layout.scss
+++ b/scss/root/_layout.scss
@@ -42,7 +42,7 @@
 .l-banner {
   position: sticky;
   top: 0;
-  z-index: 900;
+  z-index: 500;
   background-color: $white;
 
   .toolbar-horizontal & {
